Modify Kconfig and Makefile for p22
Bug: 214018056
Bug: 214118475
Change-Id: I63e399d4276939dc30976078eea704b8cb7c54f1
Signed-off-by: Wendly Li <wendlyli@google.com>

--- a/Kconfig
+++ b/Kconfig
@@ -14,7 +14,8 @@ if TOUCHSCREEN_GOODIX_BRL
 
 config TOUCHSCREEN_GOODIX_BRL_SPI
 	bool "support SPI bus connection"
+	depends on SPI_MASTER
 	help
-		Say Y here if the touchscreen is connected via SPI bus.
+	  Say Y here if the touchscreen is connected via SPI bus.
 
 endif
