Add touch power manager
Bug: 214118711
Test: Build succeeded
Signed-off-by: Wendly Li <wendlyli@google.com>
Change-Id: Id9a404e0535da3f8a0ea6aab282c6889c74d967f

--- a/Kconfig
+++ b/Kconfig
@@ -19,3 +19,8 @@ config TOUCHSCREEN_GOODIX_BRL_SPI
 	  Say Y here if the touchscreen is connected via SPI bus.
 
 endif
+
+config TOUCHSCREEN_PM
+	bool "touch power manager"
+	help
+	  Say Y here if the touchscreen is connected via SPI bus.
