--- a/Kconfig
+++ b/Kconfig
@@ -24,3 +24,8 @@ config TOUCHSCREEN_PM
 	bool "touch power manager"
 	help
 	  Say Y here if the touchscreen is connected via SPI bus.
+
+config TOUCHSCREEN_MOTION_FILTER
+	bool "touch motion filter"
+	help
+	  Say Y here if motion filter is enabled.
